Footer hieght reduced

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -128,8 +128,8 @@
       background: #333;
       color: #fff;
       text-align: center;
-      padding: 10px 20px;
       font-size: 14px;
+      height: 20px;
     }
   </style>
   <!-- Include Marked library for Markdown rendering -->
@@ -172,7 +172,6 @@
   </div>
 
   <footer style="text-align: center; padding: 10px 20px; background: #333; color: #fff; font-size: 14px;">
-    <p>
       MIT Licensed &nbsp;|&nbsp;
       <a href="https://github.com/Ramshreyas/ethqna" target="_blank" style="color: #fff; text-decoration: none; vertical-align: middle;">
         <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" style="vertical-align: middle; margin-right: 5px;" data-view-component="true">
@@ -180,7 +179,6 @@
         </svg>
         GitHub
       </a>
-    </p>
   </footer>
   
   <script>
