--- a/frontend/templates/ethqna.html
+++ b/frontend/templates/ethqna.html
@@ -241,7 +241,7 @@
 </head>
 <body>
   <header>
-    <div class="header-left">ETH QnA - Enhanced</div>
+    <div class="header-left">ETH QnA - Conversation Starter</div>
     <div class="header-right">
       <span>{{ user.name or user.email }}</span>
       <a href="{{ url_for('logout') }}"> ⏏ &nbsp;</a>
@@ -278,9 +278,9 @@
       <div class="topic-panel">
         <label>Sources:</label>
         <div class="checkbox-group">
-          <label><input type="checkbox" name="sources" value="source1"> Source 1</label>
-          <label><input type="checkbox" name="sources" value="source2"> Source 2</label>
-          <label><input type="checkbox" name="sources" value="source3"> Source 3</label>
+          <label><input type="checkbox" name="sources" value="source1"> ETH Research</label>
+          <label><input type="checkbox" name="sources" value="source2"> EIPs</label>
+          <label><input type="checkbox" name="sources" value="source3"> EPS Wiki</label>
         </div>
       </div>
       
