--- a/frontend/templates/ethqna.html
+++ b/frontend/templates/ethqna.html
@@ -241,7 +241,7 @@
 </head>
 <body>
   <header>
-    <div class="header-left">ETH QnA - Conversation Starter Mockup</div>
+    <div class="header-left">ETH QnA - Teaser</div>
     <div class="header-right">
       <span>{{ user.name or user.email }}</span>
       <a href="{{ url_for('logout') }}"> ⏏ &nbsp;</a>
