--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -169,7 +169,7 @@
   </div>
 
   <footer>
-    &copy; 2025 ETH QnA. All rights reserved.
+    &copy; 2025 Ecodev Coordinators.
   </footer>
 
   <script>
